# boolygon

./: Cargo.toml  README.md
.github/workflows/: ci.yml
benches/: bench_main.rs
benches/benchmarks/: cartesian.rs
src/: clipper.rs  determinant.rs  either.rs  graph.rs  lib.rs  node.rs  pair.rs  point.rs  polygon.rs  polyline.rs  radian.rs  shape.rs  tolerance.rs  vertex.rs
src/cartesian/: determinant.rs  mod.rs  point.rs  polygon.rs  segment.rs
src/clipper/: clip.rs  context.rs  graph.rs  mod.rs  restorable.rs  traverse.rs  vertex.rs
src/graph/: mod.rs
src/graph/builder/: btree.rs  edges.rs  intersection.rs  mod.rs
src/spherical/: arc.rs  mod.rs  point.rs  polygon.rs
tests/: cartesian.rs
